--- a/COVID-19_TRACKER_HTML_CSS_JAVASCRIPT/index.html
+++ b/COVID-19_TRACKER_HTML_CSS_JAVASCRIPT/index.html
@@ -1,20 +1,12 @@
-<!-- CODE EXPLAINED TUTORIALS -->
-<!-- youtube.com/CodeExplained -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./resources/css/style.css" />
-    <title>COVID-19 STATS - JAVASCRIPT</title>
+    <title>Live Statistics</title>
   </head>
   <body>
-    <center>
-      <br />
-      <h1>Any Support From Your Side Will Be Appreciated</h1>
-      <h1><a href="https://paypal.me/CodeExplained">Paypal ME</a></h1>
-      <br />
-    </center>
     <header>
       <div class="logo">
         <img src="./resources/img/logo.png" alt="" />
